fix(lead): honor authoritative retry outcomes